AVG addition & app css update

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+:root {
+  --bg-color: #1a202c;
+  --text-color: #f7fafc;
+  --primary-color: #2b6cb0;
+  --link-color: #63b3ed;
+  --font-base: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Inter", "Aptos", "Arial", "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: var(--font-base);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
