--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,13 @@
   border-color: var(--link-color);
 }
 
+.app-container {
+  max-width: 500px;
+  margin: 4px;
+  padding: 4px;
+  border: 1px solid black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -75,4 +82,37 @@
 .fade-disappear-up.animate {
   transform: translateY(-50%);
   opacity: 0;
+}
+
+/* NOT FOUND PAGE */
+
+.not-found-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh; /* or however high you'd like it to be */
+}
+
+.not-found-container h1 {
+  font-size: 5rem; /* large, eye-catching number */
+  margin: 0;
+}
+
+.not-found-container p {
+  margin: 1rem;
+}
+
+.home-link {
+  background-color: var(--primary-color); /* Adjust color as necessary */
+  color: var(--text-color);
+  padding: 10px 20px;
+  text-decoration: none;
+  margin-top: 2rem;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.home-link:hover {
+  background-color: var(--link-color); /* Lighter or darker version of primary color */
 }
