--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@
 
 /* ... other styles ... */
 
+.landing-container,
 .footer-container {
   padding: 1rem 0;
   border-top: 1px solid #eaeaea;
@@ -92,6 +93,7 @@
 
 .footer-content {
   margin: 1rem 0;
+  font-size: 1rem;
 }
 
 .patreon-logo {
